--- a/code/templates/table-site-participants.html
+++ b/code/templates/table-site-participants.html
@@ -9,7 +9,8 @@
     <div class="">{{@enrolledDate}}</div>
     <div class="">
       <button data-tag="view-participant-status" class="btn btn-bare btn-link">Status</button> |
-      <button data-tag="view-participant-consents" class="btn btn-bare btn-link">Consents</button>
+      <button data-tag="view-participant-consents" class="btn btn-bare btn-link">Consents</button> |
+      <button data-tag="view-participant-devices" class="btn btn-bare btn-link">Devices</button>
     </div>
 
     <div slot="no-data">There are no items to display</div>
