--- a/code/assets/css/trials.css
+++ b/code/assets/css/trials.css
@@ -98,3 +98,10 @@
   margin-left: 5px;
   font-weight: 600;
 }
+
+.statistics {
+  background-color: #008798;
+  color: white;
+  padding-left: 10px;
+  padding-right: 10px;
+}
