--- a/code/templates/table-sites.html
+++ b/code/templates/table-sites.html
@@ -4,7 +4,7 @@
       <span class="py-2">{{ @name }}</span>
     </div>
 
-    <div class="">{{@id}}</div>
+    <div class="">{{@siteName}}</div>
     <div class="">{{@id}}</div>
     <div class="">{{@country}}</div>
     <div class="">{{@status}}</div>
