--- a/code/templates/table-trial-consents.html
+++ b/code/templates/table-trial-consents.html
@@ -15,6 +15,6 @@
       <button data-tag="add-trial-version" class="btn btn-bare btn-link">Add Version</button>
     </div>
 
-    <div slot="no-data">There are no items to display</div>
+    <div slot="no-data" class="flex flex-row justify-content-center align-items-center">There are no items to display</div>
   </webc-datatable>
 </webc-container>
