--- a/code/templates/table-site-participants-consents.html
+++ b/code/templates/table-site-participants-consents.html
@@ -1,20 +1,25 @@
-<webc-container controller="TableTemplateController" data-view-model="@" class="sites-data-table data-table">
-  <webc-datatable datasource="@dataSource" class="table-cell-web align-items-center justify-content-center">
-    <div slot="header" class="table-header" data-for="@headerItems" style="display: contents">
-      <span class="py-2">{{ @name }}</span>
-    </div>
+<webc-container class="common-datatable dt-7-col" controller="TableTemplateController" data-view-model="@">
+    <webc-datatable datasource="@dataSource">
+        <div slot="header">Consent Name</div>
+        <div slot="header">Type</div>
+        <div slot="header">Version</div>
+        <div slot="header">TS Signed</div>
+        <div slot="header">TS Withdrew</div>
+        <div slot="header">HCO Signature</div>
+        <div slot="header">Options</div>
 
-    <div class="">{{@name}}</div>
-    <div class="">{{@type}}</div>
-    <div class="">{{@versionToShow}}</div>
-    <div class="">{{@participantSigned}}</div>
-    <div class="">{{@participantWithDrew}}</div>
-    <div class="">{{@hcoSigned}}</div>
-    <div class="">
-      <button data-tag="view-participant-consent-preview" class="btn btn-bare btn-link">Preview</button> |
-      <button data-tag="view-participant-consent-history" class="btn btn-bare btn-link">History</button>
-    </div>
+        <div class="cell">{{@name}}</div>
+        <div class="cell">{{@type}}</div>
+        <div class="cell">{{@versionToShow}}</div>
+        <div class="cell">{{@participantSigned}}</div>
+        <div class="cell">{{@participantWithDrew}}</div>
+        <div class="cell">{{@hcoSigned}}</div>
+        <div class="cell">
+            <button class="btn btn-bare btn-link" data-tag="view-participant-consent-preview">Preview</button>
+            |
+            <button class="btn btn-bare btn-link" data-tag="view-participant-consent-history">History</button>
+        </div>
 
-    <div slot="no-data">There are no items to display</div>
-  </webc-datatable>
+        <div slot="no-data">There are no items to display</div>
+    </webc-datatable>
 </webc-container>
