--- a/code/templates/table-trial-consents.html
+++ b/code/templates/table-trial-consents.html
@@ -1,20 +1,27 @@
-<webc-container controller="TableTemplateController" data-view-model="@" class="trials-data-table data-table">
-  <webc-datatable datasource="@dataSource" class="table-cell-web align-items-center justify-content-center">
-    <div slot="header" class="table-header" data-for="@headerItems" style="display: contents">
-      <span class="py-2">{{ @name }}</span>
-    </div>
+<webc-container class="common-datatable dt-6-col" controller="TableTemplateController" data-view-model="@">
+    <webc-datatable datasource="@dataSource">
+        <div slot="header">Consent Name</div>
+        <div slot="header">Attachment</div>
+        <div slot="header">Date</div>
+        <div slot="header">Type</div>
+        <div slot="header">Version</div>
+        <div slot="header">Options</div>
 
-    <div class="">{{@name}}</div>
-    <div class="">{{@attachment}}</div>
-    <div class="">{{@versionDate}}</div>
-    <div class="">{{@type}}</div>
-    <div class="">{{@version}}</div>
-    <div class="">
-      <button data-tag="view-attachment" class="btn btn-bare btn-link">Preview</button> |
-      <button data-tag="view-consent-history" class="btn btn-bare btn-link">Consent History</button> |
-      <button data-tag="add-trial-version" class="btn btn-bare btn-link">Add Version</button>
-    </div>
+        <div class="cell">{{@name}}</div>
+        <div class="cell">{{@attachment}}</div>
+        <div class="cell">{{@versionDate}}</div>
+        <div class="cell">{{@type}}</div>
+        <div class="cell">{{@version}}</div>
+        <div class="cell">
+            <button class="btn btn-bare btn-link" data-tag="view-attachment">Preview</button>
+            |
+            <button class="btn btn-bare btn-link" data-tag="view-consent-history">Consent History</button>
+            |
+            <button class="btn btn-bare btn-link" data-tag="add-trial-version">Add Version</button>
+        </div>
 
-    <div slot="no-data" class="flex flex-row justify-content-center align-items-center">There are no items to display</div>
-  </webc-datatable>
+        <div class="flex flex-row justify-content-center align-items-center" slot="no-data">There are no items to
+            display
+        </div>
+    </webc-datatable>
 </webc-container>
