--- a/code/templates/table-template.html
+++ b/code/templates/table-template.html
@@ -1,4 +1,4 @@
-<webc-container class="common-datatable dt-5-col" controller="TableTemplateController" data-view-model="@">
+<webc-container class="common-datatable dt-5-col" controller="template-controllers/TableTemplateController" data-view-model="@">
     <webc-datatable datasource="@dataSource">
         <div slot="header">Trial Number / ID</div>
         <div slot="header">Trial Name</div>
