--- a/code/templates/table-site-consents.html
+++ b/code/templates/table-site-consents.html
@@ -1,4 +1,4 @@
-<webc-container class="common-datatable dt-5-col" controller="TableTemplateController" data-view-model="@">
+<webc-container class="common-datatable dt-5-col" controller="template-controllers/TableTemplateController" data-view-model="@">
     <webc-datatable datasource="@dataSource">
         <div slot="header">Site Cons. Name</div>
         <div slot="header">Ongoing Main Cons.</div>
