--- a/code/templates/table-site-participants-history.html
+++ b/code/templates/table-site-participants-history.html
@@ -1,4 +1,4 @@
-<webc-container class="common-datatable dt-7-col" controller="TableTemplateController" data-view-model="@">
+<webc-container class="common-datatable dt-7-col" controller="template-controllers/TableTemplateController" data-view-model="@">
     <webc-datatable datasource="@dataSource">
         <div slot="header">Consent Name</div>
         <div slot="header">Type</div>
