--- a/code/templates/table-trial-consents.html
+++ b/code/templates/table-trial-consents.html
@@ -1,4 +1,4 @@
-<webc-container class="common-datatable dt-6-col" controller="TableTemplateController" data-view-model="@">
+<webc-container class="common-datatable dt-6-col" controller="template-controllers/TableTemplateController" data-view-model="@">
     <webc-datatable datasource="@dataSource">
         <div slot="header">Consent Name</div>
         <div slot="header">Attachment</div>
