Implemented Visits for each consent https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/295 | cleanup and refactoring

--- a/code/templates/table-trial-consents.html
+++ b/code/templates/table-trial-consents.html
@@ -18,6 +18,8 @@
             <button class="btn btn-bare btn-link" data-tag="view-consent-history">Consent History</button>
             |
             <button class="btn btn-bare btn-link" data-tag="add-trial-version">Add Version</button>
+            |
+            <button class="btn btn-bare btn-link" data-tag="view-visits">Visits</button>
         </div>
 
         <div class="flex flex-row justify-content-center align-items-center" slot="no-data">There are no items to
