[SPONSOR] Add a new option in Options column that will present the visits history https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/386

--- a/code/templates/table-consent-history.html
+++ b/code/templates/table-consent-history.html
@@ -13,7 +13,9 @@
         <div class="cell">{{@type}}</div>
         <div class="cell">{{@version}}</div>
         <div class="cell">
-            <button class="btn btn-bare btn-link" data-tag="view-attachment">Preview</button>
+            <button class="btn btn-bare btn-link" data-tag="view-attachment">Preview Consent</button>
+            |
+            <button class="btn btn-bare btn-link" data-tag="view-visits">Preview Visits & Procedures</button>
         </div>
 
         <div slot="no-data">No history available for this Consent</div>
