--- a/code/templates/table-site-participants-history.html
+++ b/code/templates/table-site-participants-history.html
@@ -5,7 +5,7 @@
         <div slot="header">Version</div>
         <div slot="header">TS Signed</div>
         <div slot="header">TS Withdrew</div>
-        <div slot="header">HCO Signature</div>
+        <div slot="header">HCP Signature</div>
         <div slot="header">Options</div>
 
         <div class="cell">{{@name}}</div>
