https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/491, https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/493

--- a/code/templates/table-sites.html
+++ b/code/templates/table-sites.html
@@ -5,7 +5,7 @@
         <div slot="header">Country</div>
         <div slot="header">Status</div>
         <div slot="header">Stage</div>
-        <div slot="header">Contact Data</div>
+        <div slot="header">Principal Investigator</div>
         <div slot="header">Options</div>
 
         <div class="cell">{{@siteName}}</div>
