https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/494

--- a/code/templates/table-template.html
+++ b/code/templates/table-template.html
@@ -16,7 +16,7 @@
     <div class="cell">{{@created}}</div>
     <div class="cell">{{@status}}</div>
     <div class="cell d-flex flex-column">
-      <span>{{@recruitmentPeriod}}</span>
+      <span>{{@recruitmentPeriod.toShowDate}}</span>
       <button class="btn btn-bare btn-link" data-tag="set-recruitment-period">Edit Recruitment Period</button>
     </div>
     <div class="cell">
