https://github.com/PharmaLedger-IMI/eco-iot-pmed-workspace/issues/516

--- a/code/templates/table-template.html
+++ b/code/templates/table-template.html
@@ -20,7 +20,7 @@
       <button class="btn btn-bare btn-link" data-tag="set-recruitment-period">Edit Recruitment Period</button>
     </div>
     <div class="cell">
-      <button class="btn btn-bare btn-link" data-tag="edit-trial">Edit</button>
+      <button class="btn btn-bare btn-link" data-tag="edit-trial" disabled="@disabledEdited">Edit</button>
       |
       <button class="btn btn-bare btn-link" data-tag="view-trial-status">Status</button>
       |
