--- a/code/templates/table-site-consents.html
+++ b/code/templates/table-site-consents.html
@@ -15,7 +15,7 @@
             |
             <button class="btn btn-bare btn-link" data-tag="view-site-consent-history">Consent History</button>
             |
-            <button class="btn btn-bare btn-link" data-tag="add-site-consent" disabled="@addConsentButtonDisabled">Add Version</button>
+            <button class="btn btn-bare btn-link" data-tag="add-site-consent" disabled="@trialIsNotActive">Add Version</button>
         </div>
 
         <div slot="no-data">There are no items to display</div>
