--- a/code/templates/table-sites.html
+++ b/code/templates/table-sites.html
@@ -19,7 +19,7 @@
             |
             <button class="btn btn-bare btn-link" data-tag="view-site-subjects">Subjects</button>
             |
-            <button class="btn btn-bare btn-link" data-tag="edit-site-contact" disabled="@isStatusNegative">Edit Contact</button>
+            <button class="btn btn-bare btn-link" data-tag="edit-site-contact" disabled="@trialIsNotActive">Edit Contact</button>
         </div>
 
         <div slot="no-data">There are no items to display</div>
