--- a/code/templates/table-trial-consents.html
+++ b/code/templates/table-trial-consents.html
@@ -17,7 +17,7 @@
             |
             <button class="btn btn-bare btn-link" data-tag="view-consent-history">Consent History</button>
             |
-            <button class="btn btn-bare btn-link" data-tag="add-trial-version" disabled="@isStatusNegative">Add Version</button>
+            <button class="btn btn-bare btn-link" data-tag="add-trial-version" disabled="@trialIsNotActive">Add Version</button>
             |
             <button class="btn btn-bare btn-link" data-tag="view-visits">Visits</button>
         </div>
